@@ -9,6 +9,7 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 - [Bugfix] Excape key cancels editing [#190]
 - [Bugfix] Adjust permissions on created folders when transfering files [#77]
 - [Bugfix] Cannot write to group writable files (SFTP) [#173]
+- [Bugfix] Spotlight module not working [#212]
 - [Feature] Added options to use Cyberduck as a portable application (see http://www.freesmug.org/portableapps/) [#180]
 
 2.5.4
